network_access_control_lists.tf
#      _   _      _                      _    
#     | \ | |    | |                    | |   
#     |  \| | ___| |___      _____  _ __| | __
#     | . ` |/ _ \ __\ \ /\ / / _ \| '__| |/ /
#     | |\  |  __/ |_ \ V  V / (_) | |  |   < 
#     |_| \_|\___|\__| \_/\_/ \___/|_|  |_|\_\
#
#              /\                         
#             /  \   ___ ___ ___  ___ ___ 
#            / /\ \ / __/ __/ _ \/ __/ __|
#           / ____ \ (_| (_|  __/\__ \__ \
#          /_/    \_\___\___\___||___/___/
#                 _____            _             _ 
#                / ____|          | |           | |
#               | |     ___  _ __ | |_ _ __ ___ | |
#               | |    / _ \| '_ \| __| '__/ _ \| |
#               | |___| (_) | | | | |_| | | (_) | |
#                \_____\___/|_| |_|\__|_|  \___/|_|
#                     _      _     _       
#                    | |    (_)   | |      
#                    | |     _ ___| |_ ___ 
#                    | |    | / __| __/ __|
#                    | |____| \__ \ |_\__ \
#                    |______|_|___/\__|___/

resource "aws_network_acl" "allow-all" {

  vpc_id = aws_vpc.this.id

  subnet_ids = [aws_subnet.public.id]

  # Outbound...
  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  # Inbound...
  ingress {
    protocol   = "-1"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = {
    Name = "Allow All"
  }

}
